minified output, model analytics capturing

--- a/examples/console.html
+++ b/examples/console.html
@@ -28,7 +28,7 @@
       });
 
       // Comment out this line to reduce console noise
-      writeable._loglevel('info');
+      // writeable._loglevel('info');
 
       write();
 
